make python site header scroll aware and avoid double scroller

--- a/docs/python_docs/_static/mxnet.css
+++ b/docs/python_docs/_static/mxnet.css
@@ -200,3 +200,7 @@ p {
     margin: 4px;
     cursor: pointer;
 }
+
+.scrollUp {
+    transform: translateY(-80px);
+}
