--- a/docs/python_docs/themes/mx-theme/src/scss/_root.scss
+++ b/docs/python_docs/themes/mx-theme/src/scss/_root.scss
@@ -18,6 +18,14 @@ body {
     display: none;
 }
 
+.mdl-layout__container {
+    height: calc(100% - 76px);
+    margin-top: 76px;
+}
+.mdl-layout__header {
+    position: fixed;
+    transition: transform 0.5s;
+}
 .mdl-layout--fixed-drawer>.mdl-layout__content {
     margin-left: 300px;    
 }
